test_regress/t/t_mem_slice_dtype_bad.out
%Error: t/t_mem_slice_dtype_bad.v:22:43: ADD unexpected in assignment to unpacked array
   22 |     completed_cnt[id] <= completed_cnt_dp + 1;
      |                                           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
